bugs tabela corrigidos, falta implementar os botoes Excluir e Baixar PDF

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -273,7 +273,7 @@
 
   <footer class="text-start">
     <i class="fas fa-box"></i>
-    Projeto final turma 2025 do curso <b>Entra21</b> da Blusoft.
+    Projeto final turma 2025 do curso <b>Entra21</b> da Blusoft [hash] 680d2e0.
   </footer>
   <script defer src="assets/js/fiberguardian_utils.js"></script>
   <script defer src="assets/js/fiberguardian_core.js"></script>
