--- a/frontend/src/main/webapp/tela_cadastro_produto.html
+++ b/frontend/src/main/webapp/tela_cadastro_produto.html
@@ -7,6 +7,7 @@
   <title>Cadastro de Produto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="assets/css/tela_cadastro_recebimento.css">
   <link rel="stylesheet" href="assets/css/dropdown_generico.css">
   <link rel="stylesheet" href="assets/css/tela_cadastro_produto.css">
@@ -25,7 +26,7 @@
               <label for="fornecedor" class="form-label">Fornecedor</label>
               <div class="input-group">
                 <input type="text" id="fornecedor" name="fornecedor" class="form-control" autocomplete="off"
-                  placeholder="Digite parte do nome/CNPJ" required />
+                  placeholder="Digite parte do nome" />
                 <button id="btnBuscarFornecedor" name="btnBuscarFornecedor" class="btn btn-outline-secondary"
                   type="button">
                   <i class="fas fa-search me-2"></i>Buscar
@@ -84,26 +85,49 @@
       </section>
     </div>
 
-    <div class="modal fade" id="modalMensagemSistema" tabindex="-1" aria-labelledby="modalMensagemLabel"
+    <!-- Modal de Alerta Global -->
+    <div class="modal fade" id="modalMensagemSistema" tabindex="-1" aria-labelledby="modalMensagemSistemaTitulo"
       aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header bg-warning text-dark">
-            <h5 class="modal-title" id="modalMensagemLabel">Mensagem</h5>
+            <h5 class="modal-title" id="modalMensagemSistemaTitulo">Aviso</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
           </div>
-          <div class="modal-body text-pre-wrap" id="modalMensagemBody"></div>
+          <div class="modal-body">
+            <!-- Conteúdo da mensagem será inserido via JS -->
+          </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+              OK
+            </button>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../webapp/assets/js/fiberguardian_core.js"></script>
-  <script src="../webapp/assets/js/tela_cadastro_produto.js"></script>
+    <!-- Modal de Confirmação Genérico -->
+    <div class="modal fade" id="modalConfirmacaoGenerico" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalConfirmacaoTitulo">Confirmação</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+
+          <div class="modal-body" id="modalConfirmacaoMensagem">
+            <!-- Mensagem será preenchida dinamicamente -->
+          </div>
+
+          <div class="modal-footer">
+            <button id="btnConfirmacaoSim" type="button" class="btn btn-primary">Sim</button>
+            <button id="btnConfirmacaoNao" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
