--- a/frontend/src/main/webapp/tela_consulta_produto.html
+++ b/frontend/src/main/webapp/tela_consulta_produto.html
@@ -103,18 +103,47 @@
         </div>
     </div>
 
-    <div class="modal fade" id="modalMensagemSistema" tabindex="-1" aria-labelledby="modalMensagemLabel"
+    <!-- Modal de Alerta Global -->
+    <div class="modal fade" id="modalMensagemSistema" tabindex="-1" aria-labelledby="modalMensagemSistemaTitulo"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header bg-warning text-dark">
-                    <h5 class="modal-title" id="modalMensagemLabel">Mensagem</h5>
+                    <h5 class="modal-title" id="modalMensagemSistemaTitulo">Aviso</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                 </div>
-                <div class="modal-body text-pre-wrap" id="modalMensagemBody"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                <div class="modal-body">
+                    <!-- Conteúdo da mensagem será inserido via JS -->
                 </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                        OK
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Confirmação Genérico -->
+    <div class="modal fade" id="modalConfirmacaoGenerico" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalConfirmacaoTitulo">Confirmação</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                </div>
+
+                <div class="modal-body" id="modalConfirmacaoMensagem">
+                    <!-- Mensagem será preenchida dinamicamente -->
+                </div>
+
+                <div class="modal-footer">
+                    <button id="btnConfirmacaoSim" type="button" class="btn btn-primary">Sim</button>
+                    <button id="btnConfirmacaoNao" type="button" class="btn btn-secondary"
+                        data-bs-dismiss="modal">Não</button>
+                </div>
+
             </div>
         </div>
     </div>
