--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -84,7 +84,9 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <label for="arquivoNota" class="form-label">Arquivo da Nota Fiscal (PDF)</label>
+            <label for="arquivoNota" class="form-label">
+              <i class="fas fa-file-pdf me-2"></i>Arquivo da Nota Fiscal (PDF)
+            </label>
             <input type="file" id="arquivoNota" name="arquivoNota" class="form-control" accept="application/pdf" />
           </div>
 
