Resolvido problema de permissoes de LABORATORIO e ENG_LAB nas tabelas fornecedores, nfs, itens de nfs e pesquisar laudos

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -145,13 +145,13 @@
               <li class="nav-item">
                 <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_recebimento.html')">
-                  Novo Recebimento
+                  Cadastrar Recebimento
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_consulta_recebimento.html')">
-                  Pesquisa Recebimento
+                  Consultar Recebimento
                 </a>
               </li>
             </ul>
@@ -165,11 +165,11 @@
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_fornecedor.html')">Novo Fornecedor</a>
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_fornecedor.html')">Cadastrar Fornecedor</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_fornecedor.html')">Pesquisar
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_fornecedor.html')">Consultar
                   Fornecedores</a>
               </li>
             </ul>
@@ -183,11 +183,11 @@
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_produto.html')">Novo Produto</a>
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_produto.html')">Cadastrar Produto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_produto.html')">Pesquisar
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_produto.html')">Consultar
                   Produtos</a>
               </li>
             </ul>
@@ -242,7 +242,7 @@
               </li>
               <li class="nav-item" id="menuCadastrarUsuario" data-role-allowed="ADMIN">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_usuario.html')">Cadastrar Novo Usuário</a>
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_usuario.html')">Cadastrar Usuário</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
