Agora Jasper Report compila em tempo de execucao via arquivo jrxml, image em resource static

--- a/frontend/src/main/webapp/tela_consulta_laboratorio.html
+++ b/frontend/src/main/webapp/tela_consulta_laboratorio.html
@@ -137,7 +137,7 @@
                 <th>Data</th>
                 <th>Obs.</th>
                 <th>Status</th>
-                <th>Ações</th>
+                <th class="actions-col">Ações</th>
               </tr>
             </thead>
             <tbody></tbody>
